--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 16 16%22><text y=%2214%22 font-size=%2216%22>👋</text></svg>"
+    type="image/svg+xml" />
   <link rel="stylesheet" href="style.css">
   <title>Jarek Danielak | Home</title>
 </head>
@@ -11,16 +14,16 @@
 <body>
   <div class="wrapper">
     <p>Hi, I'm Jarek Danielak 👋</p>
-    <p>Software engineer @ <a href="https://camunda.com">Camunda</a></p>
+    <p>---</p>
+    <p>software engineer @ <a href="https://camunda.com" target="_blank">Camunda</a></p>
     <p class="no-margin-top">(a process automation company)</p>
-    <p>Stuff I make:</p>
-    <ul>
-      <li><a href="https://bpmn.io">bpmn.io</a> - open-source BPMN modeling tools</li>
-      <li><a href="https://chromewebstore.google.com/detail/box-breathing/noaeeglcelaeagcinamdhdimncablpfc">
-          Box Breathing</a>
-        - Chrome extension for mindful breathing</li>
-      </li>
-    </ul>
+    <p>working on <a href="https://bpmn.io" target="_blank">bpmn.io</a></p>
+    <p class="no-margin-top">(open-source BPMN modeling tools)</p>
+    <p>---</p>
+    <p>...and other stuff</p>
+    <p><a href="https://github.com/jarekdanielak/mango" target="_blank">mango</a></p>
+    <p class="no-margin-top">(box breathing chrome extension)</p>
+    <p>???</p>
   </div>
 </body>
 
